--- a/index.html
+++ b/index.html
@@ -168,13 +168,9 @@
           <img src="./img/foto.png" alt="foto">
         </div>
         <div class="col-md-6">
-          <p>Hello, I'm Wahyu Aldhi Noviyanto. I am college student currently studying Informatics at Indonesia Computer
-            Untiversity. I enjoy resolving the problem and implementing the idea with design. Interest in
-            exploring various design styles and following the design trend. I love slicing design for my website as
-            well. I
-            also had experience as a blogger who shares random stuff and loves to redesign blogger templates used HTML &
-            CSS
-            for almost 2 years starting in 2017 until 2019.</p>
+          <p>Hello, I'm Wahyu Aldhi Noviyanto. I am college student currently studying Informatics at Universitas Muhammadiyah tangerang. I enjoy resolving the problem and implementing the idea with design. Interest in
+            exploring various design styles and following the design trend. I love slicing design for my website as well. I also had experience as a blogger who shares random stuff and loves to redesign blogger templates used HTML & CSS for almost 2 years starting in 2017 until 2019.
+          </p>
           <center>
             <a href="https://www.facebook.com/aldinovianto215/"><i class="fa fa-facebook"></i></a>
             <a href="https://www.twitter.com/resaendr/"><i class="fa fa-twitter"></i></a>
